--- a/resources/views/modules/pedigree-chart/chart.phtml
+++ b/resources/views/modules/pedigree-chart/chart.phtml
@@ -51,6 +51,10 @@ new WebtreesPedigreeChart.PedigreeChart(
             return treeLayout ?? <?= json_encode($configuration->getLayout()) ?>;
         },
 
+        get openNewTabOnClick() {
+            return openNewTabOnClick ?? <?= json_encode($configuration->getOpenNewTabOnClick()) ?>;
+        },
+
         data: <?= json_encode($data) ?>
     }
 );
