Fixes #68: Add module config option to show/hide alternative name

--- a/resources/views/modules/pedigree-chart/chart.phtml
+++ b/resources/views/modules/pedigree-chart/chart.phtml
@@ -55,6 +55,10 @@ new WebtreesPedigreeChart.PedigreeChart(
             return openNewTabOnClick ?? <?= json_encode($configuration->getOpenNewTabOnClick()) ?>;
         },
 
+        get showAlternativeName() {
+            return showAlternativeName ?? <?= json_encode($configuration->getShowAlternativeName()) ?>;
+        },
+
         data: <?= json_encode($data) ?>
     }
 );
