Fix HTML issue with form elements without label

--- a/resources/views/modules/pedigree-chart/form/generations.phtml
+++ b/resources/views/modules/pedigree-chart/form/generations.phtml
@@ -17,7 +17,7 @@ use MagicSunday\Webtrees\PedigreeChart\Configuration;
  */
 ?>
 
-<div class="form-group row">
+<fieldset class="form-group row">
     <label class="col-sm-3 col-form-label wt-page-options-label" for="generations">
         <?= I18N::translate('Generations') ?>
     </label>
@@ -31,4 +31,4 @@ use MagicSunday\Webtrees\PedigreeChart\Configuration;
         ])
         ?>
     </div>
-</div>
+</fieldset>
