--- a/resources/views/modules/pedigree-chart/form/orientation.phtml
+++ b/resources/views/modules/pedigree-chart/form/orientation.phtml
@@ -17,17 +17,17 @@ use MagicSunday\Webtrees\PedigreeChart\Configuration;
  */
 ?>
 
-<fieldset class="form-group row">
-    <legend class="col-form-label col-sm-3 wt-page-options-label">
+<div class="row">
+    <div class="col-form-label col-sm-3 wt-page-options-label">
         <?= I18N::translate('Orientation') ?>
-    </legend>
+    </div>
     <div class="col-sm-9 wt-page-options-value" id="layout">
         <?=
-        view('components/radios-inline', [
-            'name'     => 'layout',
-            'options'  => $configuration->getLayouts(),
-            'selected' => $configuration->getLayout(),
-        ])
+            view('components/radios-inline', [
+                'name'     => 'layout',
+                'options'  => $configuration->getLayouts(),
+                'selected' => $configuration->getLayout(),
+            ])
         ?>
     </div>
-</fieldset>
+</div>
