--- a/resources/views/modules/pedigree-chart/form/orientation.phtml
+++ b/resources/views/modules/pedigree-chart/form/orientation.phtml
@@ -21,7 +21,7 @@ use MagicSunday\Webtrees\PedigreeChart\Configuration;
     <div class="col-form-label col-sm-3 wt-page-options-label">
         <?= I18N::translate('Orientation') ?>
     </div>
-    <div class="col-sm-9 wt-page-options-value" id="layout">
+    <div class="col-sm-9 wt-page-options-value">
         <?=
             view('components/radios-inline', [
                 'name'     => 'layout',
