--- a/resources/css/svg.css
+++ b/resources/css/svg.css
@@ -1,7 +1,5 @@
 /* SVG export styles */
 .webtrees-pedigree-chart-container svg {
-    /* Native font stack: see https://www.smashingmagazine.com/2015/11/using-system-ui-fonts-practical-guide/ */
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     min-height: 600px;
 }
 
@@ -41,11 +39,7 @@
     stroke: rgb(175, 175, 175);
     stroke-width: 1.5px;
     stroke-linecap: butt;
-    /*shape-rendering: crispEdges;*/
-}
-
-.webtrees-pedigree-chart-container svg g.name tspan.preferred {
-    text-decoration: underline;
+    shape-rendering: geometricPrecision;
 }
 
 .webtrees-pedigree-chart-container svg text.date {
@@ -54,16 +48,16 @@
     font-size: 13px;
 }
 
-.webtrees-pedigree-chart-container svg .wt-chart-box-name {
+.webtrees-pedigree-chart-container svg text.wt-chart-box-name {
     fill: var(--link-color, currentColor);
 }
 
-.webtrees-pedigree-chart-container svg .wt-chart-box-name-alt {
+.webtrees-pedigree-chart-container svg text.wt-chart-box-name-alt {
     fill: currentColor;
     font-weight: 500;
     font-size: 0.85em;
 }
 
-.webtrees-pedigree-chart-container svg .wt-chart-box-name:hover:not(.wt-chart-box-name-alt) {
+.webtrees-pedigree-chart-container svg text.wt-chart-box-name:hover:not(.wt-chart-box-name-alt) {
     fill: var(--link-color-hover);
 }
