Hide export buttons in fullscreen mode

--- a/resources/css/pedigree-chart.css
+++ b/resources/css/pedigree-chart.css
@@ -1,4 +1,7 @@
-/* Button toolbar */
+.wt-ajax-load:empty {
+    min-height: 50dvh;
+}
+
 .webtrees-pedigree-fullscreen-container::backdrop {
     background-color: var(--bs-body-bg);
 }
@@ -7,16 +10,13 @@
     position: relative;
 }
 
+/* Button toolbar */
 .webtrees-pedigree-fullscreen-container .btn-toolbar {
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
 
-[fullscreen] .webtrees-pedigree-fullscreen-container .wt-page-content {
-    padding: 0;
-}
-
-.webtrees-pedigree-fullscreen-container .chart-button {
+.webtrees-pedigree-fullscreen-container .btn-chart {
     color: var(--bs-btn-bg);
     background: rgb(245, 245, 245);
     border: 1px solid rgb(210, 210, 210);
@@ -36,32 +36,24 @@
     background: rgb(245, 245, 245);
 }
 
-.webtrees-pedigree-fullscreen-container .chart-button:hover {
+.webtrees-pedigree-fullscreen-container .btn-chart:hover {
     color: var(--link-color-hover);
 }
 
-.webtrees-pedigree-fullscreen-container .chart-button .icon {
+.webtrees-pedigree-fullscreen-container .btn-chart .icon {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
-.webtrees-pedigree-fullscreen-container .chart-button .icon .svg-inline--fa {
+.webtrees-pedigree-fullscreen-container .btn-chart .icon .svg-inline--fa {
     height: 1.5em;
     vertical-align: -0.375em;
 }
 
-.webtrees-pedigree-fullscreen-container .fullscreen-button span:nth-child(2) {
+.webtrees-pedigree-fullscreen-container .btn-fullscreen span:nth-child(2) {
     display: none;
-}
-
-[fullscreen] .webtrees-pedigree-fullscreen-container .fullscreen-button span:nth-child(1) {
-    display: none;
-}
-
-[fullscreen] .webtrees-pedigree-fullscreen-container .fullscreen-button span:nth-child(2) {
-    display: inline-block;
 }
 
 /* Form */
@@ -81,11 +73,6 @@
     font-size: unset;
     display: flex;
     flex: auto;
-}
-
-[fullscreen] .webtrees-pedigree-chart-container {
-    min-height: 100dvh;
-    max-height: 100dvh;
 }
 
 .webtrees-pedigree-chart-container svg {
@@ -148,4 +135,30 @@
     .webtrees-pedigree-chart-container div.overlay .tooltip {
         color: white;
     }
+}
+
+/* Fullscreen */
+[fullscreen] .webtrees-pedigree-fullscreen-container .wt-page-content {
+    padding: 0;
+}
+
+[fullscreen] .webtrees-pedigree-fullscreen-container .btn-fullscreen span:nth-child(1) {
+    display: none;
+}
+
+[fullscreen] .webtrees-pedigree-fullscreen-container .btn-fullscreen span:nth-child(2) {
+    display: inline-block;
+}
+
+[fullscreen] .webtrees-pedigree-fullscreen-container #exportPNG {
+    display: none;
+}
+
+[fullscreen] .webtrees-pedigree-fullscreen-container #exportSVG {
+    display: none;
+}
+
+[fullscreen] .webtrees-pedigree-chart-container {
+    min-height: 100dvh;
+    max-height: 100dvh;
 }
