--- a/resources/views/modules/pedigree-chart/page.phtml
+++ b/resources/views/modules/pedigree-chart/page.phtml
@@ -84,7 +84,7 @@ use MagicSunday\Webtrees\PedigreeChart\Configuration;
     <div class="row webtrees-pedigree-fullscreen-container">
         <?= view($moduleName . '::modules/components/buttonbar', ['moduleName' => $moduleName]) ?>
 
-        <div id="pedigree-chart-url" class="wt-ajax-load wt-page-content wt-chart wt-pedigree-chart mt-0"></div>
+        <div id="pedigree-chart-url" class="wt-ajax-load wt-page-content wt-chart wt-chart-pedigree mt-0"></div>
     </div>
 </div>
 
