--- a/resources/css/svg.css
+++ b/resources/css/svg.css
@@ -1,6 +1,6 @@
 /* SVG export styles */
 .webtrees-pedigree-chart-container svg {
-    min-height: 600px;
+    min-height: 50dvh;
 }
 
 /* Required for the exported SVG to display properly in Inkscape */
