--- a/resources/views/modules/pedigree-chart/form/layout.phtml
+++ b/resources/views/modules/pedigree-chart/form/layout.phtml
@@ -41,7 +41,7 @@ use MagicSunday\Webtrees\PedigreeChart\Configuration;
                     'unchecked' => '0',
                 ])
             ?>
-            <small class="ps-4 form-text text-muted form-element-description">
+            <small class="ps-4 form-text text-muted form-element-description" style="box-decoration-break: clone;">
                 <?= I18N::translate('Open the current individual\'s detail page in a new browser window/tab when it\'s left-clicked, otherwise the current window/tab is used.') ?>
             </small>
         </div>
@@ -55,7 +55,7 @@ use MagicSunday\Webtrees\PedigreeChart\Configuration;
                     'unchecked' => '0',
                 ])
             ?>
-            <small class="ps-4 form-text text-muted form-element-description">
+            <small class="ps-4 form-text text-muted form-element-description" style="box-decoration-break: clone;">
                 <?= I18N::translate('Displays a person\'s alternate name, if available. This simultaneously enlarges the individuals\' respective boxes to create the necessary space for the display.') ?>
             </small>
         </div>
