--- a/resources/views/modules/pedigree-chart/page.phtml
+++ b/resources/views/modules/pedigree-chart/page.phtml
@@ -82,7 +82,7 @@ use MagicSunday\Webtrees\PedigreeChart\Configuration;
     </form>
 
     <div class="row webtrees-pedigree-fullscreen-container">
-        <?= view($moduleName . '::modules/components/buttonbar', ['moduleName' => $moduleName]) ?>
+        <?= view($moduleName . '::modules/components/buttonbar', ['configuration' => $configuration, 'moduleName' => $moduleName]) ?>
 
         <div id="pedigree-chart-url" class="wt-ajax-load wt-page-content wt-chart wt-chart-pedigree mt-0"></div>
     </div>
